--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,11 @@
-name: Build and Deploy Container
+name: Build and Push Container
 
 on:
   push:
     branches: ["main"]
 
 jobs:
-  build-and-deploy:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
@@ -24,10 +24,3 @@ jobs:
 
       - name: Push Docker image
         run: docker push ghcr.io/${{ secrets.GHCR_USERNAME }}/ml-app:latest
-
-      - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: "ml-cicd-demo-gvfyb7ckhbf6dzft"
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          images: "ghcr.io/${{ secrets.GHCR_USERNAME }}/ml-app:latest"
