--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
           password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Build Docker image
-        run: docker build -t ghcr.io/${{ secrets.GHCR_USERNAME }}/ml-app:latest .
+        run: docker build -t ghcr.io/${{ secrets.GHCR_USERNAME }}/ml-cicd:latest .
 
       - name: Push Docker image
-        run: docker push ghcr.io/${{ secrets.GHCR_USERNAME }}/ml-app:latest
+        run: docker push ghcr.io/${{ secrets.GHCR_USERNAME }}/ml-cicd:latest
