--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,37 +1,29 @@
-name: CI/CD with GHCR and Azure Web App
+name: CI/CD
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
+  pull_request:
 
 jobs:
-  build-and-deploy:
+  tests:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
+      - name: Install deps
+        run: pip install -r requirements.txt
+      - name: Run tests
+        run: pytest
 
-      - name: Log in to GHCR
-        run: |
-          echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io \
-            -u ${{ secrets.GHCR_USERNAME }} --password-stdin
-
-      - name: Build Docker image
-        run: |
-          IMAGE_TAG=${{ github.sha }}
-          docker build -t ghcr.io/${{ secrets.GHCR_USERNAME }}/ml-app:${IMAGE_TAG} .
-
-      - name: Push Docker image
-        run: |
-          IMAGE_TAG=${{ github.sha }}
-          docker push ghcr.io/${{ secrets.GHCR_USERNAME }}/ml-app:${IMAGE_TAG}
-
-      - name: Update Azure Web App container
-        run: |
-          az webapp config container set \
-            --name ml-cicd-demo \
-            --resource-group CloudAI \
-            --docker-custom-image-name ghcr.io/${{ secrets.GHCR_USERNAME }}/ml-app:${{ github.sha }} \
-            --docker-registry-server-url https://ghcr.io \
-            --docker-registry-server-user ${{ secrets.GHCR_USERNAME }} \
-            --docker-registry-server-password ${{ secrets.GHCR_TOKEN }}
+  deploy:
+    needs: tests
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ml-cicd-demo
+          images: ghcr.io/mmaszka/ml-cicd:latest
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
