--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,3 +23,12 @@ jobs:
 
       - name: Run tests
         run: pytest
+        
+      - name: Log in to GitHub Container Registry
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+      - name: Build Docker image
+        run: docker build -t ghcr.io/mmaszka/ml-cicd:latest .
+
+      - name: Push Docker image
+        run: docker push ghcr.io/mmaszka/ml-cicd:latest
