--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -2,7 +2,6 @@ permissions:
   contents: read
   packages: write
 
-
 name: CI/CD
 
 on:
@@ -28,7 +27,13 @@ jobs:
 
       - name: Run tests
         run: pytest
-        
+
+  build_and_deploy:
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - uses: actions/checkout@v4
+
       - name: Log in to GitHub Container Registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
@@ -42,6 +47,4 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: ml-cicd-demo
-          slot-name: production
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
-              
